[project]
name = "notamoltbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Patrick Dornian", email = "patrick.dornian@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.2.9",
    "langchain-anthropic>=1.3.2",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.1.0",
    "numba>=0.63.0",
    "python-telegram-bot>=22.6",
    "unstructured[md]>=0.18.31",
]

[project.scripts]
notamoltbot = "notamoltbot:main"

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
