[project]
name = "notamoltbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Patrick Dornian", email = "patrick.dornian@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
notamoltbot = "notamoltbot:main"

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"
